--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<title>Quiz</title>
-    
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
        </head>
     <style>
         body {
